<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/comment_toolbar" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:src="@mipmap/logo_about" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin20"
        android:layout_marginRight="@dimen/activity_horizontal_margin20"
        android:layout_marginTop="@dimen/activity_horizontal_margin40"
        android:lineSpacingExtra="@dimen/activity_horizontal_margin5"
        android:maxLines="7"
        android:text="@string/about_text"
        android:textColor="@color/foot_header_item_text"
        android:textSize="@dimen/activity_text_size16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin40"
        android:background="@color/line" />

    <RelativeLayout
        android:id="@+id/weixin_gongzhong"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_horizontal_margin40">

        <TextView
            android:id="@+id/weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/activity_horizontal_margin20"
            android:text="@string/about_weixin"
            android:textColor="@color/foot_header_item_text"
            android:textSize="@dimen/activity_text_size18" />

        <TextView
            android:id="@+id/zztrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:paddingLeft="20dp"
            android:text="@string/about_zzTrip"
            android:textColor="@color/foot_header_item_text"
            android:textSize="@dimen/activity_text_size16" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />

    <RelativeLayout
        android:id="@+id/version_updating"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_horizontal_margin40">

        <TextView
            android:id="@+id/check_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/activity_horizontal_margin20"
            android:text="@string/check_version"
            android:textColor="@color/foot_header_item_text"
            android:textSize="@dimen/activity_text_size18" />

        <TextView
            android:id="@+id/current_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:paddingLeft="20dp"
            android:textColor="@color/foot_header_item_text"
            android:textSize="@dimen/activity_text_size16" />
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_horizontal_margin40">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/activity_horizontal_margin20"
            android:text="@string/about_service"
            android:textColor="@color/foot_header_item_text"
            android:textSize="@dimen/activity_text_size18" />

        <TextView
            android:id="@+id/service_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:paddingLeft="20dp"
            android:text="@string/service_phone"
            android:textColor="@color/foot_header_item_text"
            android:textSize="@dimen/activity_text_size16" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />
</LinearLayout>